// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mykeels/sticky-notes components/StickyNote Custom Size 1`] = `
HTMLCollection [
  <div
    class="bg-gray-100 inline-block p-0"
    draggable="true"
    style="top: 0px; left: 0px;"
  >
    <div
      class="bg-blue  px-2 py-2 block w-full relative overflow-visible sticky-header"
    >
      <div
        class="inline-block w-1/2 text-xs"
      >
        <span
          class="relative bottom-1"
        />
      </div>
      <div
        class="inline-block w-1/2 text-right"
      >
        <button
          class="text-2xl text-gray-200 inline-block focus:outline px-4 relative sticky-header-button"
        >
          <span
            class="relative bottom-2"
          >
            ...
          </span>
        </button>
      </div>
    </div>
    <textarea
      class="bg-gray-100 text-white text-lg p-4"
      style="resize: both; width: 320px; height: 288px;"
    />
  </div>,
]
`;

exports[`@mykeels/sticky-notes components/StickyNote Index 1`] = `
HTMLCollection [
  <div
    class="bg-gray-100 inline-block p-0"
    draggable="true"
    style="top: 0px; left: 0px; z-index: 1;"
  >
    <div
      class="bg-blue  px-2 py-2 block w-full relative overflow-visible sticky-header"
    >
      <div
        class="inline-block w-1/2 text-xs"
      >
        <span
          class="relative bottom-1"
        />
      </div>
      <div
        class="inline-block w-1/2 text-right"
      >
        <button
          class="text-2xl text-gray-200 inline-block focus:outline px-4 relative sticky-header-button"
        >
          <span
            class="relative bottom-2"
          >
            ...
          </span>
        </button>
      </div>
    </div>
    <textarea
      class="bg-gray-100 text-white text-lg p-4"
      style="resize: both; width: 192px; height: 128px;"
    />
  </div>,
]
`;
